# actions-private-actions

./: .eslintrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  action.yml  package.json  pyproject.toml  tsconfig.json
private_actions/: __init__.py
src/: main.ts
