[tool.poetry]
name = "private_actions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.scripts]
private_actions = "private_actions:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
